update the projects; change my name from Youssef to J.; fix markdown linting;

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,12 +12,12 @@
     name="keywords"
     content="STEM, Youssef Adly, personal blog, coding, medicine, medical student, tech enthusiast, web development, hobbyist developer, programming"
   />
-  <meta name="author" content="Youssef Adly" />
+  <meta name="author" content="J. Adly" />
 
   <!-- Open Graph Meta Tags (for social sharing) -->
   <meta
     property="og:title"
-    content="Youssef Adly | Medical Student, STEM Enthusiast, Hobbyist Developer"
+    content="J. Adly | Medical Student, STEM Enthusiast, Hobbyist Developer"
   />
   <meta
     property="og:description"
@@ -35,7 +35,7 @@
   <meta name="twitter:site" content="@youssefadly237" />
   <meta
     name="twitter:title"
-    content="Youssef Adly | Medical Student, STEM Enthusiast, Hobbyist Developer"
+    content="Medicine Student, MNU ‘29 | HS Student, Assiut STEM School ‘24 | MSSS SCORP PSD GA | Coding hobbyist and part time dev | Kantian | ⲣⲉⲙⲛ̀ⲭⲏⲙⲓ"
   />
   <meta
     name="twitter:description"
@@ -91,7 +91,7 @@
     if (currentTheme) {
       document.documentElement.setAttribute(
         "data-theme",
-        localStorage.getItem("theme")
+        localStorage.getItem("theme"),
       );
     }
   </script>
