--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,11 +47,31 @@
   />
 
   <title>{{site.title}} | {{page.title}}</title>
+
+  <!-- Favicons -->
   <link
     rel="icon"
-    href="{{site.baseurl}}/assets/icons/mylogo.svg"
     type="image/svg+xml"
+    href="{{site.baseurl}}/assets/icons/mylogo.svg"
   />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="{{site.baseurl}}/assets/icons/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="{{site.baseurl}}/assets/icons/favicon-16x16.png"
+  />
+  <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="{{site.baseurl}}/assets/icons/apple-touch-icon.png"
+  />
+  <link rel="shortcut icon" href="{{site.baseurl}}/assets/icons/favicon.ico" />
   {% if page.layout == "post" or page.layout == "item" %}
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/post.css" />
   <link rel="stylesheet" href="{{site.baseurl}}/assets/css/syntax.css" />
@@ -91,7 +111,7 @@
     if (currentTheme) {
       document.documentElement.setAttribute(
         "data-theme",
-        localStorage.getItem("theme"),
+        localStorage.getItem("theme")
       );
     }
   </script>
