--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -21,25 +21,25 @@ body {
   background-color: var(--gray-5);
 }
 .content a {
-  color: #cba6f7;
-  border-bottom: 1px solid #cba6f7;
+  color: var(--mauve);
+  border-bottom: 1px solid var(--mauve);
 }
 @media (prefers-color-scheme: light) {
   .content a {
-    color: #8839ef;
-    border-bottom: 1px solid #8839ef;
+    color: var(--mauve);
+    border-bottom: 1px solid var(--mauve);
   }
 }
 [data-theme="light"] {
   .content a {
-    color: #8839ef;
-    border-bottom: 1px solid #8839ef;
+    color: var(--mauve);
+    border-bottom: 1px solid var(--mauve);
   }
 }
 [data-theme="dark"] {
   .content a {
-    color: #cba6f7;
-    border-bottom: 1px solid #cba6f7;
+    color: var(--mauve);
+    border-bottom: 1px solid var(--mauve);
   }
 }
 header {
@@ -186,12 +186,18 @@ main {
 }
 
 .content pre {
+  font-family: "JetBrains Mono", monospace;
+  font-variant-ligatures: none;
+  letter-spacing: 0.02em;
   background: var(--gray-3);
   padding: 1rem 2rem;
   margin-bottom: 1.75rem;
 }
 
 .content code {
+  font-family: "JetBrains Mono", monospace;
+  font-variant-ligatures: none;
+  letter-spacing: 0.02em;
   padding: 3px 5px;
   color: var(--white-2);
   white-space: pre;
@@ -270,8 +276,8 @@ main {
   max-width: 90%;
   max-height: 80%;
   padding: 4px;
-  background-color: black;
-  border: 2px solid white;
+  background-color: var(--crust);
+  border: 2px solid var(--text);
 }
 
 @media screen and (max-width: 750px) {
