--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,241 +1,222 @@
 /* syntax */
 
 .highlight .hll {
-  background-color: #333333;
+  background-color: var(--gray-1);
 }
 .highlight {
-  color: #ffffff;
+  color: var(--text);
+  font-family: "JetBrains Mono", monospace;
+  font-variant-ligatures: none;
+  letter-spacing: 0.02em;
 }
 .highlight .c {
-  color: #008800;
+  color: var(--overlay0);
   font-style: italic;
-  /* background-color: #0f140f; */
 } /* Comment */
 .highlight .err {
-  color: #ffffff;
+  color: var(--red);
 } /* Error */
 .highlight .g {
-  color: #ffffff;
+  color: var(--text);
 } /* Generic */
 .highlight .k {
-  color: #fb660a;
-  font-weight: bold;
+  color: var(--mauve);
 } /* Keyword */
 .highlight .l {
-  color: #ffffff;
+  color: var(--text);
 } /* Literal */
 .highlight .n {
-  color: #ffffff;
+  color: var(--text);
 } /* Name */
 .highlight .o {
-  color: #ffffff;
+  color: var(--sky);
 } /* Operator */
 .highlight .x {
-  color: #ffffff;
+  color: var(--text);
 } /* Other */
 .highlight .p {
-  color: #ffffff;
+  color: var(--overlay2);
 } /* Punctuation */
 .highlight .cm {
-  color: #008800;
+  color: var(--overlay0);
   font-style: italic;
-  /* background-color: #0f140f; */
 } /* Comment.Multiline */
 .highlight .cp {
-  color: #ff0007;
-  font-weight: bold;
+  color: var(--red);
   font-style: italic;
-  /* background-color: #0f140f; */
 } /* Comment.Preproc */
 .highlight .c1 {
-  color: #008800;
+  color: var(--overlay0);
   font-style: italic;
-  /* background-color: #0f140f; */
 } /* Comment.Single */
 .highlight .cs {
-  color: #008800;
+  color: var(--overlay0);
   font-style: italic;
-  /* background-color: #0f140f; */
 } /* Comment.Special */
 .highlight .gd {
-  color: #ffffff;
+  color: var(--red);
 } /* Generic.Deleted */
 .highlight .ge {
-  color: #ffffff;
+  color: var(--text);
+  font-style: italic;
 } /* Generic.Emph */
 .highlight .gr {
-  color: #ffffff;
+  color: var(--red);
 } /* Generic.Error */
 .highlight .gh {
-  color: #ffffff;
-  font-weight: bold;
+  color: var(--blue);
 } /* Generic.Heading */
 .highlight .gi {
-  color: #ffffff;
+  color: var(--green);
 } /* Generic.Inserted */
 .highlight .go {
-  color: #444444;
-  background-color: #222222;
+  color: var(--subtext0);
+  background-color: var(--gray-4);
 } /* Generic.Output */
 .highlight .gp {
-  color: #ffffff;
+  color: var(--overlay1);
 } /* Generic.Prompt */
 .highlight .gs {
-  color: #ffffff;
+  color: var(--text);
 } /* Generic.Strong */
 .highlight .gu {
-  color: #ffffff;
-  font-weight: bold;
+  color: var(--blue);
 } /* Generic.Subheading */
 .highlight .gt {
-  color: #ffffff;
+  color: var(--red);
 } /* Generic.Traceback */
 .highlight .kc {
-  color: #fb660a;
-  font-weight: bold;
+  color: var(--mauve);
 } /* Keyword.Constant */
 .highlight .kd {
-  color: #fb660a;
-  font-weight: bold;
+  color: var(--mauve);
 } /* Keyword.Declaration */
 .highlight .kn {
-  color: #fb660a;
-  font-weight: bold;
+  color: var(--mauve);
 } /* Keyword.Namespace */
 .highlight .kp {
-  color: #fb660a;
+  color: var(--mauve);
 } /* Keyword.Pseudo */
 .highlight .kr {
-  color: #fb660a;
-  font-weight: bold;
+  color: var(--mauve);
 } /* Keyword.Reserved */
 .highlight .kt {
-  color: #cdcaa9;
-  font-weight: bold;
+  color: var(--yellow);
 } /* Keyword.Type */
 .highlight .ld {
-  color: #ffffff;
+  color: var(--text);
 } /* Literal.Date */
 .highlight .m {
-  color: #0086f7;
-  font-weight: bold;
+  color: var(--peach);
 } /* Literal.Number */
 .highlight .s {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String */
 .highlight .na {
-  color: #ff0086;
-  font-weight: bold;
+  color: var(--blue);
 } /* Name.Attribute */
 .highlight .nb {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Builtin */
 .highlight .nc {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Class */
 .highlight .no {
-  color: #0086d2;
+  color: var(--peach);
 } /* Name.Constant */
 .highlight .nd {
-  color: #ffffff;
+  color: var(--mauve);
 } /* Name.Decorator */
 .highlight .ni {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Entity */
 .highlight .ne {
-  color: #ffffff;
+  color: var(--red);
 } /* Name.Exception */
 .highlight .nf {
-  color: #ff0086;
-  font-weight: bold;
+  color: var(--blue);
 } /* Name.Function */
 .highlight .nl {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Label */
 .highlight .nn {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Namespace */
 .highlight .nx {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Other */
 .highlight .py {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Property */
 .highlight .nt {
-  color: #fb660a;
-  font-weight: bold;
+  color: var(--mauve);
 } /* Name.Tag */
 .highlight .nv {
-  color: #fb660a;
+  color: var(--mauve);
 } /* Name.Variable */
 .highlight .ow {
-  color: #ffffff;
+  color: var(--teal);
 } /* Operator.Word */
 .highlight .w {
-  color: #888888;
+  color: var(--overlay0);
 } /* Text.Whitespace */
 .highlight .mf {
-  color: #0086f7;
-  font-weight: bold;
+  color: var(--peach);
 } /* Literal.Number.Float */
 .highlight .mh {
-  color: #0086f7;
-  font-weight: bold;
+  color: var(--peach);
 } /* Literal.Number.Hex */
 .highlight .mi {
-  color: #0086f7;
-  font-weight: bold;
+  color: var(--peach);
 } /* Literal.Number.Integer */
 .highlight .mo {
-  color: #0086f7;
-  font-weight: bold;
+  color: var(--peach);
 } /* Literal.Number.Oct */
 .highlight .sb {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Backtick */
 .highlight .sc {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Char */
 .highlight .sd {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Doc */
 .highlight .s2 {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Double */
 .highlight .se {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Escape */
 .highlight .sh {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Heredoc */
 .highlight .si {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Interpol */
 .highlight .sx {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Other */
 .highlight .sr {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Regex */
 .highlight .s1 {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Single */
 .highlight .ss {
-  color: #0086d2;
+  color: var(--green);
 } /* Literal.String.Symbol */
 .highlight .bp {
-  color: #ffffff;
+  color: var(--text);
 } /* Name.Builtin.Pseudo */
 .highlight .vc {
-  color: #fb660a;
+  color: var(--mauve);
 } /* Name.Variable.Class */
 .highlight .vg {
-  color: #fb660a;
+  color: var(--mauve);
 } /* Name.Variable.Global */
 .highlight .vi {
-  color: #fb660a;
+  color: var(--mauve);
 } /* Name.Variable.Instance */
 .highlight .il {
-  color: #0086f7;
-  font-weight: bold;
+  color: var(--peach);
 } /* Literal.Number.Integer.Long */
